# hbp

./: .gitignore  LICENSE  README.md  requirements.txt  run.bat  run.sh  run_databaser.bat  run_databaser.sh  run_downloader.bat  run_downloader.sh  run_plotter.bat  run_plotter.sh  run_skeet.bat  run_skeeter.bat  run_skeeter.sh
config/: settings.ini
database/: hbpdata.db
libhbp/: LICENSE  README.md  pyproject.toml  requirements.txt
libhbp/src/libhbp/: basic.py  sqlitemgr.py
scratch/: dbtest.py
src/hbp/: __init__.py  constants.py  dbpopulator.py  downloader.py  func_baseball.py  func_general.py  func_skeet.py  functions.py  plotter.py  skeeter.py
src/hbp/libhbp/: basic.py  constants.py  func_baseball.py  func_database.py  func_general.py  func_plot.py  func_skeet.py  sqlitemgr.py
vibe-bullshit/: hbp_topographic.py  plothbp.py  plothbp_simple.py
