[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "libhbp"
version = "1.0.0"
authors = [
  { name="Hossein Fuller", email="hossfuller@protonmail.com" },
]
description = "General library to do things the way I like them done."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/hossfuller/hbp"
Issues = "https://github.com/hossfuller/hbp/issues"
